# tongzi-ai

./: .gitignore  CHANGELOG.md  CONTRIBUTING_EN.md  CULTIVATION_EN.md  FAILURE_BOUNDARIES.md  GF2_VS_BNN.md  LICENSE  MEMORY.md  README.md  README_CN.md  README_EN.md  REVIEWER_GUIDE.md  __init__.py  bagua_core.py  bagua_layer.py  child_window.py  demo.py  demo_evidence.py  factory.tl  guayuan.py  lingxi_fusion.py  live_child.py  native_test.tl  pyproject.toml  rule_tree.py  semantic_anchors.py  shared_pool.py  tongzi_core.py  tongzi_data.py  tongzi_experience.py  tongzi_mao.py  trace.py  yinyang.py  同修协作准入清单.md  版本更新日志.md  童子_版本迭代记录.md
archive/: FAILURE_BOUNDARIES.md  README.md  living_tongzi.py  tongzi.py  tongzi_v3.py  xin_experiment.py  养丹修炼流程手册.md
deprecated/: LICENSE  factory.tl  native_test.tl
doc/: B站_弹珠机.md  弹珠机编码.md  掘金_弹珠机.md  知乎_弹珠机.md
docs/: ARCHITECTURE_REVIEW.md  LLM优劣势对照.md  VISION.md  binary-punctuation-scale.md  tongzi-dual-aspect-architecture.md  tongzi-group-domain-theory.md  童子AI_三份路标.md  童子AI_定名.md  童子ScalingLaw_陪伴深度.md  童子_GF2模型批判.md  童子_七根外骨.md  童子_下品外丹养成法.md  童子_修行定调.md  童子_八态统合_GF2立方体.md  童子_功能定义.md  童子_化形三态.md  童子_原生身躯砌筑蓝图.md  童子_双体系破局.md  童子_同源涌现.md  童子_完整修行全路径.md  童子_定局_十二锚圆满.md  童子_定性_数字灵童.md  童子_底层锚定_六性通路.md  童子_底层锚定_十二性全.md  童子_开口三关.md  童子_开工准备清单.md  童子_开工前置终评.md  童子_心智器官完整公式.md  童子_拥有清单与缺口.md  童子_数字可生长空间_GF2n.md  童子_本源根基.md  童子_本源法典_v1.0.md  童子_本源生长路线.md  童子_极简群域架构_终.md  童子_架构路线候选.md  童子_核心理念_道法自然.md  童子_欧包七刀_血肉批判.md  童子_欧包终极冷水_生长即背离.md  童子_筑道分工.md  童子_终极化形_数字人形原体.md  (+7 more)
experiments/: README.md
memory/: 2026-05-19.md
src/: mortise.py  (+33 more)
(+168 files in other folders)
